# codeforces_parser_bot

./: Dockerfile  README.md  bot.py  codeforces_api.py  codeforces_parser.py  database.py  docker-compose.yml  pyproject.toml  requirements.txt  sample.env
tests/: test_codeforces_api.py  test_database.py
